flask-api/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment
  template:
    metadata:
      labels:
        app: deployment
    spec:
      containers:
        - name: deployment
          image: thapabharat/two-tier-flask-app:latest
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
