flask-api/k8s/deployment-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: deployment-svc
  namespace: flask
spec:
  selector:
    app: deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30007
  type: NodePort
