flask-api/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: flask
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "domain.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deployment-svc  
            port:
              number: 80
